--- a/.eslintrc
+++ b/.eslintrc
@@ -1,10 +1,17 @@
 {
-  "extends:": ["eslint:recommended", "plugin:prettier/recommended"],
-  "plugins": ["@typescript-eslint"],
+  "extends": [
+    "plugin:react/recommended",
+    "plugin:prettier/recommended"
+  ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "sourceType": "module",
-    "project": "./tsconfig.json"
+    "project": "./tsconfig.json",
   },
-  "rules": {}
+  "rules": {
+    "indent": [
+      "error",
+      2
+    ]
+  }
 }
