--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^1.4.2",
+    "@typescript-eslint/parser": "^1.4.2",
     "eslint": "^5.14.1",
     "eslint-config-prettier": "^4.0.0",
     "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-react": "^7.12.4",
     "prettier": "^1.16.4",
     "ts-loader": "^5.3.3",
     "typescript": "^3.3.3333",
